<resources>
    <string name="app_name">Heterogeneous Networks</string>
    <string name="system_manager_title">System Manager</string>
    <string name="network_manager_title">Network Manager</string>
    <string name="location_manager_title">Location Manager</string>
    <string name="policy_engine_title">Policy Engine</string>
    <string name="process_name">Name</string>
    <string name="pid">pid</string>
    <string name="uid">uid</string>
    <string name="tracking_gps_location">Tracking GPS Location</string>
    <string name="my_location">My Location</string>
    <string name="tracking_gyroscope">Tracking Gyroscope</string>
    <string name="package_title">Package</string>
    <string name="pid_title">PID</string>
    <string name="uid_title">UID</string>
    <string name="my_address">My Address</string>
    <string name="current_address">Current Address</string>
    <string name="add_policy_button_text">Add a Network Policy</string>
    <string name="event_title_text">Event :</string>
    <string name="policy_rule_vector_title">Policy Rule Vector:</string>
    <string name="current_state_vector_title">Current State Vector:</string>
    <string name="range_selector_title">Please choose a range</string>
    <string name="button_submit_text">Submit</string>
    <string name="name_title">Name</string>
    <string name="delvik_private_mem_title">Delvik Private Mem</string>
    <string name="delvik_shared_mem_title">Delvik Shared Mem</string>
    <string name="delvik_pss_title">Delvik PSS</string>
    <string name="native_private_title">Native Private</string>
    <string name="native_private_mem_title">Native Private Mem</string>
    <string name="native_pss_mem_title">Native PSS Mem</string>
    <string name="total_mem_title">Total Mem</string>
    <string name="policy_engine_button_text">GO TO POLICY ENGINE</string>
    <string name="policy_group_title">I want to add a</string>
    <string name="show_policy_options_text">GO</string>
    <string name="wifi_only_option_text">Connect only to WiFi</string>
    <string name="cellular_only_text">Connect only to Cellular 4G LTE/3G</string>
    <string name="policy_option_text">Policy</string>
    <string name="policy_option_text2">for</string>
    <string name="add_policy_button">Add Policy</string>
    <string name="application_types_text">Application Types</string>
    <string name="messaging">Messaging</string>
    <string name="video">Video</string>
    <string name="web_browser">Web Browser</string>
    <string name="banking">Banking</string>
    <string name="application">Application</string>
    <string name="youtube">YouTube</string>
    <string name="vudu">Vudu</string>
    <string name="google_chrome">Google Chrome</string>
    <string name="bank_of_america">Bank of America</string>
    <string name="policy_header">Policy</string>
    <string name="applied_to_header">Applied to</string>
    <string name="all_apps_text">All apps</string>
    <string name="video_banking_text">Video, Banking</string>
    <string-array name="policy_groups">
        <item>General Level Policy</item>
        <item>Application Type Level Policy</item>
        <item>Application Specific Policy</item>
    </string-array>
</resources>