<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="android_network.hetnet.MainActivity">

    <Button
        android:id="@+id/btn_system_manager"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/system_manager_title"
        android:onClick="startSystemManager"/>

    <Button
        android:id="@+id/btn_network_manager"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_system_manager"
        android:layout_below="@+id/btn_system_manager"
        android:text="@string/network_manager_title"
        android:onClick="startNetworkManager"/>

    <Button
        android:id="@+id/btn_location_manager"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_network_manager"
        android:layout_below="@+id/btn_network_manager"
        android:text="@string/location_manager_title"
        android:onClick="startLocationManager"/>

</RelativeLayout>
